<resources>
    <string name="app_name">Spip</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="hint_group_name">Group name</string>
    <string name="text_primary_currency">Primary currency</string>
    <string name="text_participants">Participants</string>
    <string name="hint_group_description">Group description</string>
    <string name="hint_name">Name</string>
    <string name="label_add">Add</string>
    <string name="action_done">Done</string>
    <string name="group_icon">group_icon</string>
    <string-array name="list_currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string name="title_activity_group_balance">GroupBalanceActivity</string>
    <string name="tab_text_history">History</string>
    <string name="tab_text_balances">Balances</string>
    <string name="action_edit">Edit</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Add group</string>
    <string name="add_widget">Add widget</string>
    <string name="text_add_expense">Add Expense</string>
    <string name="text_add_group">Add Group</string>
    <string name="text_loading">Loading</string>
    <string name="text_task_done">Task done.</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="hint_title">Title</string>
    <string name="hint_date">Date</string>
    <string name="text_expense">Expense</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_paid_to">Paid to</string>
    <string name="text_paid_by">Paid by</string>
</resources>
