<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="groupEntry"
            type="hu.bendaf.spip.data.GroupEntry" />
    </data>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".AddGroupActivity"
        tools:showIn="@layout/activity_add_group">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/cardview_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardview_padding"
                    android:layout_marginEnd="16dp">

                    <ImageView
                        android:id="@+id/iv_group_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/group_icon"
                        android:src="@drawable/ic_group_black_48dp" />

                    <EditText
                        android:id="@+id/et_name"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_group_icon"
                        android:hint="@string/hint_group_name"
                        android:inputType="textPersonName"
                        android:text="@{groupEntry.name}" />

                    <EditText
                        android:id="@+id/et_description"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_name"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_toEndOf="@id/iv_group_icon"
                        android:hint="@string/hint_group_description"
                        android:inputType="textLongMessage"
                        android:text="@{groupEntry.description}" />

                    <TextView
                        android:id="@+id/tv_primary_currency"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_description"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_toEndOf="@id/iv_group_icon"
                        android:text="@string/text_primary_currency" />

                    <Spinner
                        android:id="@+id/sp_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_primary_currency"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/iv_group_icon" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:elevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardview_padding"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_participants" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_participants"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#ECEFF1"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <EditText
                        android:id="@+id/et_new_person"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/hint_name" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>